[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
cargo-watch = "8.4.1"
diesel = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"
